fixed scripts